# TriangulationLab

./: .gitignore  CLAUDE.md  CMakeLists.txt  MonotoneTriangulationContext.md  README.md  isSimplePolygon_explanation.txt
.github/workflows/: main.yml
cmake/: FindEigen3.cmake
src/: config.h.in
src/core/: CMakeLists.txt
src/core/geometry/: ear_clipping.h  ear_clipping.hpp  monotone_triangulation.h  monotone_triangulation.hpp  triangulation_types.h  types.h  types.hpp
src/core/utils/: assert.h  geometry_predicates.h  numeric.h
src/gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
src/gui/facade/: DebugFacade.cpp  DebugFacade.h  TriangulationFacade.cpp  TriangulationFacade.h
src/gui/rendering/: IRenderer.h  QPainterRenderer.cpp  QPainterRenderer.h
src/gui/widgets/: TriangulationWidget.cpp  TriangulationWidget.h
src/tests/: CMakeLists.txt  test_ear_clipping.cpp  test_geometry_predicates.cpp  test_monotone_triangulation.cpp  test_types.cpp
